This commit finishes the responsive version of the services page with breakpoints at (max-width: 800px) and (max-width: 500px). Using a Desktop First approach

--- a/css/index.css
+++ b/css/index.css
@@ -165,7 +165,7 @@ header {
   flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
-  max-width: 1024px;
+  max-width: 100%;
   height: 10em;
 }
 
@@ -182,6 +182,7 @@ header {
 
 .logo {
   width: 100%;
+  padding-right: 35px;
 }
 
 h1 {
@@ -192,12 +193,13 @@ p {
   font-weight: 500;
 }
 
-button {
-  width: 275px;
+.cta-card button {
+  width: 270px;
   height: 50px;
   background-color: white;
   border: 1px solid black;
   font-size: 20px;
+  margin-top: 20px;
 }
 
 .cta-wrapper {
@@ -302,6 +304,10 @@ address {
 footer p {
   text-align: center;
 }
+
+footer h3 {
+  padding-left: 40px;
+}
 /* SERVICES CSS FLEXBOX */
 
 .main-content {
@@ -314,8 +320,10 @@ footer p {
 
 .main-img {
   height: 200px;
-  width: 1024px;
+  width: 100%;
   background-image: url("../img/services-header.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .main-info h1 {
@@ -377,195 +385,10 @@ footer p {
   width: calc(50% - 1em);
 }
 
-.services-info-img {
+.add-content-img {
   width: 100%;
-}
-
-.service-facts ul {
-  list-style: square;
-  line-height: 1.5em;
-  padding-left: 1.4em;
-}
-
-.service-facts p {
-  margin: 1em 0;
-}
-
-footer {
-  width: 100%;
-  margin: 4em 0;
-}
-
-#index-link img {
-  width: 204px;
-  padding: 0 0;
-}
-
-.gallery-img1 {
-  background-image: url("../img/bags.jpg");
-  width: 1024px;
   height: 200px;
-  background-size: cover;
-  margin-top: 50px;
-}
-
-.gallery-img2 {
-  background-image: url("../img/screens.jpg");
-  width: 1024px;
-  height: 100px;
-  background-size: cover;
-  margin-top: 15px;
-  background-position-y: center;
-  opacity: 75%;
-}
-
-.two-cards {
-  display: flex;
-  margin-top: 15px;
-  justify-content: space-between;
-}
-
-.gallery-img3 {
-  background-image: url("../img/phone.jpg");
-  width: 49%;
-  height: 500px;
-  background-size: cover;
-  background-position-x: left;
-}
-
-.gallery-img4 {
-  background-image: url("../img/phone-2.jpg");
-  width: 49%;
-  height: 500px;
-  background-size: cover;
-  background-repeat: none;
-}
-
-.gallery-img4:hover,
-.gallery-img3:hover,
-.gallery-img2:hover,
-.gallery-img1:hover {
-  border: 3px dotted black;
-  border-radius: 100px;
-
-  opacity: 80%;
-}
-
-.cta-wrapper {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-evenly;
-  justify-items: center;
-  height: 600px;
-}
-
-.cta-card h1 {
-  color: black;
-  text-align: center;
-}
-
-.cta-btn {
-  padding-left: 360px;
-}
-
-.cta-btn button {
-  border-radius: 60px;
-  background-color: lightslategray;
-  color: white;
-  font-size: 30px;
-}
-
-.gallery-img1,
-.gallery-img2,
-.gallery-img3,
-.gallery-img4 {
-  border: 3px solid black;
-}
-
-.nav-wrapper {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1024px;
-  height: 5em;
-}
-
-.main-content {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1024px;
-}
-
-.main-img {
-  height: 200px;
-  width: 1024px;
-  background-image: url("../img/services-header.jpg");
-}
-
-.main-info h1 {
-  font-size: 35px;
-  padding-top: 40px;
-}
-
-.main-info p {
-  max-width: 1024px;
-  padding-bottom: 35px;
-}
-
-.flex-container {
-  display: flex;
-  flex-flow: row wrap;
-  max-width: 1024px;
-  height: calc(900px + 8em);
-  align-content: space-between;
-  justify-content: space-between;
-  padding: 2em 0;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-}
-
-.flex-card {
-  border: 1px solid black;
-  width: calc(50% - 1em);
-  height: 300px;
-  background: #eae9e9;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-around;
-  padding: 1em 1em;
-}
-
-.flex-card button {
-  border-radius: 10px;
-  width: 200px;
-}
-.flex-card p {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.flex-card h3 {
-  font-size: 1.5em;
-}
-
-.add-content {
-  display: flex;
-  flex-wrap: nowrap;
-  max-width: 1024px;
-  padding-top: 2em;
-
-  justify-content: space-between;
-}
-
-.add-content div {
-  width: calc(50% - 1em);
-}
-
-.services-info-img {
-  width: 100%;
+  background-image: url("../img/services-info.png");
 }
 
 .service-facts ul {
@@ -586,6 +409,7 @@ footer {
   width: 204px;
   padding: 0 0;
 }
+/* CSS FOR PRODUCTS PAGE */
 
 .gallery-img1 {
   background-image: url("../img/bags.jpg");
@@ -688,7 +512,7 @@ footer {
   }
 
   .navigation {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     margin-top: 25px;
@@ -753,6 +577,27 @@ footer {
   }
 }
 
+/* Media Queries for Services Page  (Max-Width: 800px;)*/
+#services-nav {
+  display: flex;
+  flex-flow: column-reverse;
+}
+
+.main-content {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.flex-container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.add-content {
+  width: 80%;
+  margin: 0 auto;
+}
+
 @media (max-width: 500px) {
   .container {
     max-width: 500px;
@@ -762,17 +607,24 @@ footer {
     display: flex;
     flex-flow: column wrap-reverse;
     align-content: center;
-    width: 100%;
+    width: 80%;
   }
   .nav-wrapper {
     display: flex;
     flex-flow: column-reverse;
+    height: 11em;
+  }
+
+  .nav-wrapper img {
+    padding: 0 0;
+    margin: 0 auto;
   }
 
   .container header nav a {
     text-align: center;
     border-top: 1px solid black;
-    width: 100%;
+    width: 80%;
+    padding: 5px;
   }
 
   .cta-wrapper {
@@ -819,5 +671,63 @@ footer {
 
   .vision {
     padding-bottom: 10px;
+  }
+  /* Services @media max-width: 500) */
+
+  .main-img {
+    height: 100px;
+  }
+  .main-info {
+    width: 70%;
+  }
+
+  .flex-container {
+    display: flex;
+    flex-flow: column nowrap;
+    max-width: 500px;
+    height: calc(1900px + 5em);
+    align-content: space-between;
+    justify-content: space-between;
+    padding: 2em 0;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+  }
+
+  .flex-card {
+    border: 1px solid black;
+    width: calc(100% - 0em);
+    height: 300px;
+    background: #eae9e9;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    padding: 1em 1em;
+  }
+
+  .service-facts {
+    width: 500px;
+  }
+  .add-content {
+    flex-flow: column wrap;
+    width: 80%;
+  }
+  .add-content-img {
+    width: 100%;
+  }
+
+  .add-content div {
+    width: calc(100% - 0em);
+    padding: 10px;
+  }
+
+  footer h3 {
+    margin: auto auto;
+    text-align: center;
+    width: 100%;
+    padding-left: 0;
+    padding-bottom: 5px;
+  }
+  footer address {
+    margin: 0 auto;
   }
 }
